--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -8,7 +8,7 @@
     display: inline-block;
 }
 .mui-style-1hr2cxi-MuiButtonBase-root-MuiMenuItem-root:hover {
-    text-decoration: underline;
+    text-decoration: none;
     background: none;
 }
 .menuItemText span {
