Andrew Lupin Main Section.

--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -22,3 +22,7 @@
     border-radius: 15px;
     transition: all .5s ease-in-out;
 }
+.closeButton span {
+    float: right;
+    margin-top: -4.16vw;
+}
