--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -1,3 +1,9 @@
+body {
+    overflow: scroll;
+}
+body::-webkit-scrollbar {
+    display: none;
+}
 .mui-style-1467uv1-MuiContainer-root {
     max-width: 100vw;
     padding: 0px;
@@ -19,7 +25,7 @@
     content: url('../../public/images/logos/Menu_Black.svg');
     background-color: white;
     padding: 5px !important;
-    border-radius: 15px;
+    border-radius: 5px;
     transition: all .5s ease-in-out;
 }
 .closeButton span {
