--- a/src/theme/style.css
+++ b/src/theme/style.css
@@ -12,6 +12,7 @@ body::-webkit-scrollbar {
     font-size: 6.66vw;
     margin: 2.5vw 0;
     display: inline-block;
+    font-family: system-ui;
 }
 .mui-style-1hr2cxi-MuiButtonBase-root-MuiMenuItem-root:hover {
     text-decoration: none;
