Andrew Lupin Complete without framer motion.

--- a/src/theme/style.scss
+++ b/src/theme/style.scss
@@ -75,3 +75,11 @@ body::-webkit-scrollbar {
     font-size: 0.77vw;
     border: white solid 1px;
 }
+.adText {
+    font-style: normal;
+    font-weight: bold;
+    font-size: 5vw;
+    line-height: 130%;
+    color: white;
+    margin: 5vw 3vw 0 3vw;
+}
